--feat: UI of product part, end of section 12

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+
+/*breadcrumb styling - obtained from f12 - font color*/
+label.xng-breadcrumb-trail{
+    color: orange;
+}
