--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,10 @@
+<!--timer was specified within anguler.json-->
+<!--to handle it go to core/services/busy-->
+<ngx-spinner type="timer">
+   <h3>Loading...</h3>
+</ngx-spinner>
+
 <app-nav-bar></app-nav-bar>
+<app-section-header></app-section-header>
 
-<div class="container" style="margin-top: 140px;">
-   <router-outlet></router-outlet>
-</div>
-
+<router-outlet></router-outlet>
