--- a/client/src/app/feature-shop/shop.component.html
+++ b/client/src/app/feature-shop/shop.component.html
@@ -1,5 +1,7 @@
 <div class="container">
-    <div class="row">
+    <!--it takes a time to load types and brands => this is why the component shouldnt-->
+    <!--display this stuff until its fully fetched-->
+    <div class="row" *ngIf="types.length > 0 && brands.length > 0">
 
         <section class="col-3">
             <h5 class="text-warning ms-3">Sort</h5>
